// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Listicle Story Templates Should render listicle story template with section tag 1`] = `
<ContextProvider
  value={
    Object {
      "showSection": true,
      "templateType": "default",
    }
  }
>
  <ListicleStoryTemplate
    config={
      Object {
        "showSection": true,
        "templateType": "default",
      }
    }
    story={
      Object {
        "access": "subscription",
        "access-level-value": null,
        "alternative": Object {},
        "asana-project-id": null,
        "assignee-id": 927927,
        "assignee-name": "Pravin Atigre",
        "associated-series-collection-ids": Array [],
        "author-id": 927927,
        "author-name": "Pravin Atigre",
        "authors": Array [
          Object {
            "avatar-s3-key": null,
            "avatar-url": "https://lh3.googleusercontent.com/-I9kNTMFkn3E/AAAAAAAAAAI/AAAAAAAAAAA/ACHi3rdZeM4LMMdylmULvtrAvmeVF9DmAQ/photo.jpg",
            "bio": null,
            "contributor-role": Object {
              "id": 873,
              "name": "Author",
            },
            "id": 927927,
            "name": "Pravin Atigre",
            "slug": "pravin-atigre",
            "social": null,
            "twitter-handle": null,
          },
        ],
        "autotags": Array [],
        "breaking-news-linked-story-id": null,
        "bullet-type": "123",
        "canonical-url": null,
        "cards": Array [
          Object {
            "card-added-at": 1602155475842,
            "card-updated-at": 1602234185925,
            "content-id": "aeb377da-eb9f-4013-ae19-fb6fb821e926",
            "content-version-id": "9378abd6-2cec-4bdd-88b2-005cc6d1775f",
            "id": "aeb377da-eb9f-4013-ae19-fb6fb821e926",
            "metadata": Object {
              "attributes": Object {},
              "social-share": Object {
                "image": Object {
                  "attribution": "Credits: Asif Asharaf",
                  "caption": "Saque ipsa quae ab illo inventore veritatis et quip",
                  "key": "ace/2020-10/ec88fad0-ed4d-44ec-9930-72e9d897bdd0/seo.jpg",
                  "metadata": Object {
                    "file-name": "seo.jpg",
                    "file-size": 228062,
                    "height": 900,
                    "mime-type": "image/jpeg",
                    "width": 1600,
                  },
                  "url": null,
                },
                "message": null,
                "shareable": false,
                "title": "It pays to be kind: improving workplace culture through kindness",
              },
            },
            "status": "draft",
            "story-elements": Array [
              Object {
                "description": "",
                "family-id": "d3bf6239-6723-4291-a7d1-6164c808d07d",
                "id": "5ffad09b-7db1-489a-8308-f7d63c745c70",
                "metadata": Object {},
                "page-url": "/story/307e5a1b-5cf0-4321-8193-827b2add174f/element/5ffad09b-7db1-489a-8308-f7d63c745c70",
                "subtype": null,
                "text": "Nemo enim ipsam voluptatem quia volup tas sit aspernatur aut odit aut fugit",
                "title": "",
                "type": "title",
              },
              Object {
                "description": "",
                "family-id": "0a4af70b-2434-4038-8134-87cdc60fc379",
                "id": "f24c83a4-dd3d-47fe-8d05-90f6ada10632",
                "metadata": Object {},
                "page-url": "/story/307e5a1b-5cf0-4321-8193-827b2add174f/element/f24c83a4-dd3d-47fe-8d05-90f6ada10632",
                "subtype": null,
                "text": "<p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est</p>",
                "title": "",
                "type": "text",
              },
            ],
            "version": 9,
          },
          Object {
            "card-added-at": 1602155520864,
            "card-updated-at": 1602155725655,
            "content-id": "70988ea9-90a0-42ea-b2b1-1f7374de06e1",
            "content-version-id": "43ff8777-4176-4294-95a3-5aaee8e34537",
            "id": "70988ea9-90a0-42ea-b2b1-1f7374de06e1",
            "metadata": Object {
              "attributes": Object {},
              "social-share": Object {
                "image": Object {
                  "attribution": "Credits: Asif Asharaf",
                  "caption": "Saque ipsa quae ab illo inventore veritatis et quip",
                  "key": "ace/2020-10/ec88fad0-ed4d-44ec-9930-72e9d897bdd0/seo.jpg",
                  "metadata": Object {
                    "file-name": "seo.jpg",
                    "file-size": 228062,
                    "height": 900,
                    "mime-type": "image/jpeg",
                    "width": 1600,
                  },
                  "url": null,
                },
                "message": null,
                "shareable": false,
                "title": "It pays to be kind: improving workplace culture through kindness",
              },
            },
            "status": "draft",
            "story-elements": Array [
              Object {
                "description": "",
                "family-id": "11f060e0-a1aa-4963-9778-24f6b6eca401",
                "id": "82244bcd-c453-41c4-a215-bb038f569375",
                "metadata": Object {},
                "page-url": "/story/307e5a1b-5cf0-4321-8193-827b2add174f/element/82244bcd-c453-41c4-a215-bb038f569375",
                "subtype": null,
                "text": "Nemo enim ipsam voluptatem quia volup tas sit aspernatur aut odit aut fugit",
                "title": "",
                "type": "title",
              },
              Object {
                "description": "",
                "family-id": "a970d458-c7d8-4512-8420-4bf3a4046caf",
                "id": "ae7131f6-450a-4589-9995-812ba5832c58",
                "metadata": Object {},
                "page-url": "/story/307e5a1b-5cf0-4321-8193-827b2add174f/element/ae7131f6-450a-4589-9995-812ba5832c58",
                "subtype": null,
                "text": "<p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est</p>",
                "title": "",
                "type": "text",
              },
            ],
            "version": 7,
          },
          Object {
            "card-added-at": 1602155541845,
            "card-updated-at": 1602156067786,
            "content-id": "d6876a49-9319-4c24-9bf9-881ea454b967",
            "content-version-id": "dbfeb570-f9aa-4875-9c3d-f48bf551dd91",
            "id": "d6876a49-9319-4c24-9bf9-881ea454b967",
            "metadata": Object {
              "attributes": Object {},
              "social-share": Object {
                "image": Object {
                  "attribution": "Jon Doe",
                  "caption": null,
                  "key": "ace/2020-10/920f35b9-023e-44d2-b4de-69dce8587bf7/quintype_website_2020_01_2f2ba42d_7a45_4a60_b4af_7d4758f27f5d_Untitled_presentation.jpg",
                  "metadata": Object {
                    "file-name": "quintype-website_2020-01_2f2ba42d-7a45-4a60-b4af-7d4758f27f5d_Untitled_presentation.jpg",
                    "file-size": 26544,
                    "height": 540,
                    "mime-type": "image/jpeg",
                    "width": 960,
                  },
                  "url": null,
                },
                "message": null,
                "shareable": false,
                "title": "It pays to be kind: improving workplace culture through kindness",
              },
            },
            "status": "draft",
            "story-elements": Array [
              Object {
                "description": "",
                "family-id": "1b8bcf8e-19cb-4d16-ac0e-bb4f0939dbbf",
                "id": "d3cbfcce-a503-499d-80cd-52fce2215ef3",
                "metadata": Object {},
                "page-url": "/story/307e5a1b-5cf0-4321-8193-827b2add174f/element/d3cbfcce-a503-499d-80cd-52fce2215ef3",
                "subtype": null,
                "text": "Nemo enim ipsam voluptatem quia volup tas sit aspernatur aut odit aut fugit",
                "title": "",
                "type": "title",
              },
              Object {
                "description": "",
                "family-id": "6d5d82b8-f879-476d-84a2-1f62f74acdd5",
                "hyperlink": "https://www.google.com/",
                "id": "a7f79ffa-4be0-4207-a495-a035a020cac3",
                "image-attribution": "Jon Doe",
                "image-metadata": Object {
                  "file-name": "quintype-website_2020-01_2f2ba42d-7a45-4a60-b4af-7d4758f27f5d_Untitled_presentation.jpg",
                  "file-size": 26544,
                  "height": 540,
                  "mime-type": "image/jpeg",
                  "width": 960,
                },
                "image-s3-key": "ace/2020-10/920f35b9-023e-44d2-b4de-69dce8587bf7/quintype_website_2020_01_2f2ba42d_7a45_4a60_b4af_7d4758f27f5d_Untitled_presentation.jpg",
                "metadata": Object {},
                "page-url": "/story/307e5a1b-5cf0-4321-8193-827b2add174f/element/a7f79ffa-4be0-4207-a495-a035a020cac3",
                "subtype": null,
                "title": "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor.",
                "type": "image",
              },
              Object {
                "description": "",
                "family-id": "b9a1fdd8-5727-4e5a-86a6-467922aa155f",
                "id": "2a248f86-3181-4456-9f96-f7e56668fbc1",
                "metadata": Object {},
                "page-url": "/story/307e5a1b-5cf0-4321-8193-827b2add174f/element/2a248f86-3181-4456-9f96-f7e56668fbc1",
                "subtype": null,
                "text": "<p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est</p>",
                "title": "",
                "type": "text",
              },
            ],
            "version": 10,
          },
          Object {
            "card-added-at": 1602156035607,
            "card-updated-at": 1602156067786,
            "content-id": "539c1ed1-79e5-4771-a304-60b46d8376c6",
            "content-version-id": "dc523cfa-dcf2-41b5-ab7a-b5c3577e11f7",
            "id": "539c1ed1-79e5-4771-a304-60b46d8376c6",
            "metadata": Object {
              "attributes": Object {},
              "social-share": Object {
                "image": Object {
                  "attribution": "Credits: Asif Asharaf",
                  "caption": "Saque ipsa quae ab illo inventore veritatis et quip",
                  "key": "ace/2020-10/ec88fad0-ed4d-44ec-9930-72e9d897bdd0/seo.jpg",
                  "metadata": Object {
                    "file-name": "seo.jpg",
                    "file-size": 228062,
                    "height": 900,
                    "mime-type": "image/jpeg",
                    "width": 1600,
                  },
                  "url": null,
                },
                "message": null,
                "shareable": false,
                "title": "It pays to be kind: improving workplace culture through kindness",
              },
            },
            "status": "draft",
            "story-elements": Array [
              Object {
                "description": "",
                "family-id": "b8f84eb7-4a91-45ba-a5d3-95d5f48c7772",
                "id": "20db973e-4612-4933-9acd-5a6d4c3d281d",
                "metadata": Object {},
                "page-url": "/story/307e5a1b-5cf0-4321-8193-827b2add174f/element/20db973e-4612-4933-9acd-5a6d4c3d281d",
                "subtype": null,
                "text": "<p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est</p>",
                "title": "",
                "type": "text",
              },
              Object {
                "description": "",
                "id": "00000000-0000-0000-0000-000000000000",
                "metadata": Object {
                  "promotional-message": true,
                },
                "subtype": null,
                "text": " <p>text <a href=\\"https://ace-web.qtstage.io/\\">promotional</a> message</p>",
                "title": "",
                "type": "text",
              },
            ],
            "version": 2,
          },
        ],
        "comments": null,
        "content-created-at": 1602154991378,
        "content-type": "story",
        "content-updated-at": 1602234199729,
        "contributors": Array [],
        "created-at": 1602234185901,
        "custom-slug": null,
        "customSlotAfterStory": Object {
          "config": Object {
            "targetingId": "",
          },
          "layout": "Leaderboard",
          "layoutLabel": "Leaderboard",
          "type": "ad",
        },
        "entities": Object {},
        "external-id": null,
        "first-published-at": 1602155728566,
        "headline": "It pays to be kind: improving workplace culture through kindness",
        "hero-image-attribution": "Credits: Asif Asharaf",
        "hero-image-caption": "Saque ipsa quae ab illo inventore veritatis et quip",
        "hero-image-hyperlink": "https://www.google.com",
        "hero-image-metadata": Object {
          "file-name": "seo.jpg",
          "file-size": 228062,
          "height": 900,
          "mime-type": "image/jpeg",
          "width": 1600,
        },
        "hero-image-s3-key": "ace/2020-10/ec88fad0-ed4d-44ec-9930-72e9d897bdd0/seo.jpg",
        "id": "307e5a1b-5cf0-4321-8193-827b2add174f",
        "is-amp-supported": true,
        "is-live-blog": false,
        "last-published-at": 1602234199516,
        "linked-entities": Array [],
        "linked-story-ids": Array [],
        "metadata": Object {
          "card-share": Object {
            "shareable": false,
          },
        },
        "owner-id": 927927,
        "owner-name": "Pravin Atigre",
        "promotional-message": " <p>text <a href=\\"https://ace-web.qtstage.io/\\">promotional</a> message</p>",
        "publish-at": null,
        "published-at": 1602234199516,
        "publisher-id": 97,
        "push-notification": null,
        "push-notification-title": null,
        "read-time": 2,
        "sections": Array [
          Object {
            "collection": Object {
              "id": 15603,
              "name": "Health",
              "slug": "health",
            },
            "data": null,
            "display-name": "Health",
            "domain-slug": null,
            "id": 11181,
            "name": "Health",
            "parent-id": 38586,
            "section-url": "https://ace-web.qtstage.io/news/health",
            "slug": "health",
          },
        ],
        "seo": Object {
          "claim-reviews": Object {
            "story": null,
          },
        },
        "sequence-no": null,
        "slug": "health/2020/10/08/it-pays-to-be-kind-improving-workplace-culture-through-kindness",
        "status": "published",
        "story-audio": Object {
          "s3-key": "ace/story-audio/2020-10/307e5a1b-5cf0-4321-8193-827b2add174f/.0e6d9a89-3bb7-47b0-8bee-a34b5f75f5e9.mp3",
        },
        "story-content-id": "307e5a1b-5cf0-4321-8193-827b2add174f",
        "story-template": "listicle",
        "story-version-id": "8768d161-6433-4f1e-b8ef-e632d180ede9",
        "storyline-id": null,
        "storyline-title": null,
        "subheadline": "Neque porro quisquam est, qui dolorem ipsum quia dolor sit.",
        "summary": null,
        "tags": Array [
          Object {
            "id": 1421524,
            "meta-description": null,
            "meta-title": null,
            "name": "health",
            "slug": "health",
            "tag-type": "Tag",
          },
          Object {
            "id": 1421525,
            "meta-description": null,
            "meta-title": null,
            "name": "culture",
            "slug": "culture",
            "tag-type": "Tag",
          },
          Object {
            "id": 1421526,
            "meta-description": null,
            "meta-title": null,
            "name": "workplace",
            "slug": "workplace",
            "tag-type": "Tag",
          },
        ],
        "updated-at": 1602234193104,
        "url": "https://ace-web.qtstage.io/health/2020/10/08/it-pays-to-be-kind-improving-workplace-culture-through-kindness",
        "version": 18,
        "votes": Object {},
        "word-count": 232,
      }
    }
    storyElementsConfig={
      Object {
        "also-read": Object {},
        "answer": Object {},
        "blockquote": Object {},
        "blurb": Object {},
        "q-and-a": Object {},
        "question": Object {},
        "quote": Object {},
        "references": Object {},
        "summary": Object {},
      }
    }
  />
</ContextProvider>
`;

exports[`Listicle Story Templates Should render listicle story template without section tag 1`] = `
<ContextProvider
  value={
    Object {
      "showSection": false,
      "templateType": "default",
    }
  }
>
  <ListicleStoryTemplate
    config={
      Object {
        "showSection": false,
        "templateType": "default",
      }
    }
    story={
      Object {
        "access": "subscription",
        "access-level-value": null,
        "alternative": Object {},
        "asana-project-id": null,
        "assignee-id": 927927,
        "assignee-name": "Pravin Atigre",
        "associated-series-collection-ids": Array [],
        "author-id": 927927,
        "author-name": "Pravin Atigre",
        "authors": Array [
          Object {
            "avatar-s3-key": null,
            "avatar-url": "https://lh3.googleusercontent.com/-I9kNTMFkn3E/AAAAAAAAAAI/AAAAAAAAAAA/ACHi3rdZeM4LMMdylmULvtrAvmeVF9DmAQ/photo.jpg",
            "bio": null,
            "contributor-role": Object {
              "id": 873,
              "name": "Author",
            },
            "id": 927927,
            "name": "Pravin Atigre",
            "slug": "pravin-atigre",
            "social": null,
            "twitter-handle": null,
          },
        ],
        "autotags": Array [],
        "breaking-news-linked-story-id": null,
        "bullet-type": "123",
        "canonical-url": null,
        "cards": Array [
          Object {
            "card-added-at": 1602155475842,
            "card-updated-at": 1602234185925,
            "content-id": "aeb377da-eb9f-4013-ae19-fb6fb821e926",
            "content-version-id": "9378abd6-2cec-4bdd-88b2-005cc6d1775f",
            "id": "aeb377da-eb9f-4013-ae19-fb6fb821e926",
            "metadata": Object {
              "attributes": Object {},
              "social-share": Object {
                "image": Object {
                  "attribution": "Credits: Asif Asharaf",
                  "caption": "Saque ipsa quae ab illo inventore veritatis et quip",
                  "key": "ace/2020-10/ec88fad0-ed4d-44ec-9930-72e9d897bdd0/seo.jpg",
                  "metadata": Object {
                    "file-name": "seo.jpg",
                    "file-size": 228062,
                    "height": 900,
                    "mime-type": "image/jpeg",
                    "width": 1600,
                  },
                  "url": null,
                },
                "message": null,
                "shareable": false,
                "title": "It pays to be kind: improving workplace culture through kindness",
              },
            },
            "status": "draft",
            "story-elements": Array [
              Object {
                "description": "",
                "family-id": "d3bf6239-6723-4291-a7d1-6164c808d07d",
                "id": "5ffad09b-7db1-489a-8308-f7d63c745c70",
                "metadata": Object {},
                "page-url": "/story/307e5a1b-5cf0-4321-8193-827b2add174f/element/5ffad09b-7db1-489a-8308-f7d63c745c70",
                "subtype": null,
                "text": "Nemo enim ipsam voluptatem quia volup tas sit aspernatur aut odit aut fugit",
                "title": "",
                "type": "title",
              },
              Object {
                "description": "",
                "family-id": "0a4af70b-2434-4038-8134-87cdc60fc379",
                "id": "f24c83a4-dd3d-47fe-8d05-90f6ada10632",
                "metadata": Object {},
                "page-url": "/story/307e5a1b-5cf0-4321-8193-827b2add174f/element/f24c83a4-dd3d-47fe-8d05-90f6ada10632",
                "subtype": null,
                "text": "<p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est</p>",
                "title": "",
                "type": "text",
              },
            ],
            "version": 9,
          },
          Object {
            "card-added-at": 1602155520864,
            "card-updated-at": 1602155725655,
            "content-id": "70988ea9-90a0-42ea-b2b1-1f7374de06e1",
            "content-version-id": "43ff8777-4176-4294-95a3-5aaee8e34537",
            "id": "70988ea9-90a0-42ea-b2b1-1f7374de06e1",
            "metadata": Object {
              "attributes": Object {},
              "social-share": Object {
                "image": Object {
                  "attribution": "Credits: Asif Asharaf",
                  "caption": "Saque ipsa quae ab illo inventore veritatis et quip",
                  "key": "ace/2020-10/ec88fad0-ed4d-44ec-9930-72e9d897bdd0/seo.jpg",
                  "metadata": Object {
                    "file-name": "seo.jpg",
                    "file-size": 228062,
                    "height": 900,
                    "mime-type": "image/jpeg",
                    "width": 1600,
                  },
                  "url": null,
                },
                "message": null,
                "shareable": false,
                "title": "It pays to be kind: improving workplace culture through kindness",
              },
            },
            "status": "draft",
            "story-elements": Array [
              Object {
                "description": "",
                "family-id": "11f060e0-a1aa-4963-9778-24f6b6eca401",
                "id": "82244bcd-c453-41c4-a215-bb038f569375",
                "metadata": Object {},
                "page-url": "/story/307e5a1b-5cf0-4321-8193-827b2add174f/element/82244bcd-c453-41c4-a215-bb038f569375",
                "subtype": null,
                "text": "Nemo enim ipsam voluptatem quia volup tas sit aspernatur aut odit aut fugit",
                "title": "",
                "type": "title",
              },
              Object {
                "description": "",
                "family-id": "a970d458-c7d8-4512-8420-4bf3a4046caf",
                "id": "ae7131f6-450a-4589-9995-812ba5832c58",
                "metadata": Object {},
                "page-url": "/story/307e5a1b-5cf0-4321-8193-827b2add174f/element/ae7131f6-450a-4589-9995-812ba5832c58",
                "subtype": null,
                "text": "<p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est</p>",
                "title": "",
                "type": "text",
              },
            ],
            "version": 7,
          },
          Object {
            "card-added-at": 1602155541845,
            "card-updated-at": 1602156067786,
            "content-id": "d6876a49-9319-4c24-9bf9-881ea454b967",
            "content-version-id": "dbfeb570-f9aa-4875-9c3d-f48bf551dd91",
            "id": "d6876a49-9319-4c24-9bf9-881ea454b967",
            "metadata": Object {
              "attributes": Object {},
              "social-share": Object {
                "image": Object {
                  "attribution": "Jon Doe",
                  "caption": null,
                  "key": "ace/2020-10/920f35b9-023e-44d2-b4de-69dce8587bf7/quintype_website_2020_01_2f2ba42d_7a45_4a60_b4af_7d4758f27f5d_Untitled_presentation.jpg",
                  "metadata": Object {
                    "file-name": "quintype-website_2020-01_2f2ba42d-7a45-4a60-b4af-7d4758f27f5d_Untitled_presentation.jpg",
                    "file-size": 26544,
                    "height": 540,
                    "mime-type": "image/jpeg",
                    "width": 960,
                  },
                  "url": null,
                },
                "message": null,
                "shareable": false,
                "title": "It pays to be kind: improving workplace culture through kindness",
              },
            },
            "status": "draft",
            "story-elements": Array [
              Object {
                "description": "",
                "family-id": "1b8bcf8e-19cb-4d16-ac0e-bb4f0939dbbf",
                "id": "d3cbfcce-a503-499d-80cd-52fce2215ef3",
                "metadata": Object {},
                "page-url": "/story/307e5a1b-5cf0-4321-8193-827b2add174f/element/d3cbfcce-a503-499d-80cd-52fce2215ef3",
                "subtype": null,
                "text": "Nemo enim ipsam voluptatem quia volup tas sit aspernatur aut odit aut fugit",
                "title": "",
                "type": "title",
              },
              Object {
                "description": "",
                "family-id": "6d5d82b8-f879-476d-84a2-1f62f74acdd5",
                "hyperlink": "https://www.google.com/",
                "id": "a7f79ffa-4be0-4207-a495-a035a020cac3",
                "image-attribution": "Jon Doe",
                "image-metadata": Object {
                  "file-name": "quintype-website_2020-01_2f2ba42d-7a45-4a60-b4af-7d4758f27f5d_Untitled_presentation.jpg",
                  "file-size": 26544,
                  "height": 540,
                  "mime-type": "image/jpeg",
                  "width": 960,
                },
                "image-s3-key": "ace/2020-10/920f35b9-023e-44d2-b4de-69dce8587bf7/quintype_website_2020_01_2f2ba42d_7a45_4a60_b4af_7d4758f27f5d_Untitled_presentation.jpg",
                "metadata": Object {},
                "page-url": "/story/307e5a1b-5cf0-4321-8193-827b2add174f/element/a7f79ffa-4be0-4207-a495-a035a020cac3",
                "subtype": null,
                "title": "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor.",
                "type": "image",
              },
              Object {
                "description": "",
                "family-id": "b9a1fdd8-5727-4e5a-86a6-467922aa155f",
                "id": "2a248f86-3181-4456-9f96-f7e56668fbc1",
                "metadata": Object {},
                "page-url": "/story/307e5a1b-5cf0-4321-8193-827b2add174f/element/2a248f86-3181-4456-9f96-f7e56668fbc1",
                "subtype": null,
                "text": "<p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est</p>",
                "title": "",
                "type": "text",
              },
            ],
            "version": 10,
          },
          Object {
            "card-added-at": 1602156035607,
            "card-updated-at": 1602156067786,
            "content-id": "539c1ed1-79e5-4771-a304-60b46d8376c6",
            "content-version-id": "dc523cfa-dcf2-41b5-ab7a-b5c3577e11f7",
            "id": "539c1ed1-79e5-4771-a304-60b46d8376c6",
            "metadata": Object {
              "attributes": Object {},
              "social-share": Object {
                "image": Object {
                  "attribution": "Credits: Asif Asharaf",
                  "caption": "Saque ipsa quae ab illo inventore veritatis et quip",
                  "key": "ace/2020-10/ec88fad0-ed4d-44ec-9930-72e9d897bdd0/seo.jpg",
                  "metadata": Object {
                    "file-name": "seo.jpg",
                    "file-size": 228062,
                    "height": 900,
                    "mime-type": "image/jpeg",
                    "width": 1600,
                  },
                  "url": null,
                },
                "message": null,
                "shareable": false,
                "title": "It pays to be kind: improving workplace culture through kindness",
              },
            },
            "status": "draft",
            "story-elements": Array [
              Object {
                "description": "",
                "family-id": "b8f84eb7-4a91-45ba-a5d3-95d5f48c7772",
                "id": "20db973e-4612-4933-9acd-5a6d4c3d281d",
                "metadata": Object {},
                "page-url": "/story/307e5a1b-5cf0-4321-8193-827b2add174f/element/20db973e-4612-4933-9acd-5a6d4c3d281d",
                "subtype": null,
                "text": "<p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est</p>",
                "title": "",
                "type": "text",
              },
              Object {
                "description": "",
                "id": "00000000-0000-0000-0000-000000000000",
                "metadata": Object {
                  "promotional-message": true,
                },
                "subtype": null,
                "text": " <p>text <a href=\\"https://ace-web.qtstage.io/\\">promotional</a> message</p>",
                "title": "",
                "type": "text",
              },
            ],
            "version": 2,
          },
        ],
        "comments": null,
        "content-created-at": 1602154991378,
        "content-type": "story",
        "content-updated-at": 1602234199729,
        "contributors": Array [],
        "created-at": 1602234185901,
        "custom-slug": null,
        "customSlotAfterStory": Object {
          "config": Object {
            "targetingId": "",
          },
          "layout": "Leaderboard",
          "layoutLabel": "Leaderboard",
          "type": "ad",
        },
        "entities": Object {},
        "external-id": null,
        "first-published-at": 1602155728566,
        "headline": "It pays to be kind: improving workplace culture through kindness",
        "hero-image-attribution": "Credits: Asif Asharaf",
        "hero-image-caption": "Saque ipsa quae ab illo inventore veritatis et quip",
        "hero-image-hyperlink": "https://www.google.com",
        "hero-image-metadata": Object {
          "file-name": "seo.jpg",
          "file-size": 228062,
          "height": 900,
          "mime-type": "image/jpeg",
          "width": 1600,
        },
        "hero-image-s3-key": "ace/2020-10/ec88fad0-ed4d-44ec-9930-72e9d897bdd0/seo.jpg",
        "id": "307e5a1b-5cf0-4321-8193-827b2add174f",
        "is-amp-supported": true,
        "is-live-blog": false,
        "last-published-at": 1602234199516,
        "linked-entities": Array [],
        "linked-story-ids": Array [],
        "metadata": Object {
          "card-share": Object {
            "shareable": false,
          },
        },
        "owner-id": 927927,
        "owner-name": "Pravin Atigre",
        "promotional-message": " <p>text <a href=\\"https://ace-web.qtstage.io/\\">promotional</a> message</p>",
        "publish-at": null,
        "published-at": 1602234199516,
        "publisher-id": 97,
        "push-notification": null,
        "push-notification-title": null,
        "read-time": 2,
        "sections": Array [
          Object {
            "collection": Object {
              "id": 15603,
              "name": "Health",
              "slug": "health",
            },
            "data": null,
            "display-name": "Health",
            "domain-slug": null,
            "id": 11181,
            "name": "Health",
            "parent-id": 38586,
            "section-url": "https://ace-web.qtstage.io/news/health",
            "slug": "health",
          },
        ],
        "seo": Object {
          "claim-reviews": Object {
            "story": null,
          },
        },
        "sequence-no": null,
        "slug": "health/2020/10/08/it-pays-to-be-kind-improving-workplace-culture-through-kindness",
        "status": "published",
        "story-audio": Object {
          "s3-key": "ace/story-audio/2020-10/307e5a1b-5cf0-4321-8193-827b2add174f/.0e6d9a89-3bb7-47b0-8bee-a34b5f75f5e9.mp3",
        },
        "story-content-id": "307e5a1b-5cf0-4321-8193-827b2add174f",
        "story-template": "listicle",
        "story-version-id": "8768d161-6433-4f1e-b8ef-e632d180ede9",
        "storyline-id": null,
        "storyline-title": null,
        "subheadline": "Neque porro quisquam est, qui dolorem ipsum quia dolor sit.",
        "summary": null,
        "tags": Array [
          Object {
            "id": 1421524,
            "meta-description": null,
            "meta-title": null,
            "name": "health",
            "slug": "health",
            "tag-type": "Tag",
          },
          Object {
            "id": 1421525,
            "meta-description": null,
            "meta-title": null,
            "name": "culture",
            "slug": "culture",
            "tag-type": "Tag",
          },
          Object {
            "id": 1421526,
            "meta-description": null,
            "meta-title": null,
            "name": "workplace",
            "slug": "workplace",
            "tag-type": "Tag",
          },
        ],
        "updated-at": 1602234193104,
        "url": "https://ace-web.qtstage.io/health/2020/10/08/it-pays-to-be-kind-improving-workplace-culture-through-kindness",
        "version": 18,
        "votes": Object {},
        "word-count": 232,
      }
    }
    storyElementsConfig={
      Object {
        "also-read": Object {},
        "answer": Object {},
        "blockquote": Object {},
        "blurb": Object {},
        "q-and-a": Object {},
        "question": Object {},
        "quote": Object {},
        "references": Object {},
        "summary": Object {},
      }
    }
  />
</ContextProvider>
`;
